--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca | Miau Café</title>
-    <meta name="description" content="Descubre más sobre Miau Café, el lugar donde los amantes de los gatos se reúnen.">
+    <meta name="description"
+        content="Explora la historia de Miau Café, el lugar donde los amantes de los gatos se reúnen para disfrutar de una experiencia única. Conoce a nuestros adorables mininos y sumérgete en la magia de nuestro cat café. ¡Descubre más aquí!">
     <meta name="keywords" content="Miau Café, cat café, historia, amantes de los gatos, café para gatos">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -63,7 +64,7 @@
             <section>
                 <div class="container my-2">
                     <div class="row">
-                        <div data-aos="fade-center" data-aos-duration="1000" class="col-12 col-lg-6 ">
+                        <div data-aos="fade-center" data-aos-duration="500" class="col-12 col-lg-6 ">
                             <h1 class="text-center mt-5 mb-3">Acerca</h1>
                             <p>La historia de Miau Café comenzó con la visión de crear un espacio donde los amantes de
                                 los gatos pudieran disfrutar de la compañía de estos encantadores felinos mientras
@@ -90,28 +91,32 @@
                         src="https://www.youtube.com/embed/KmeSy7FPdCA?si=zeQ-2SmNcNuZqREB&amp;controls=0"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
+                        allowfullscreen data-aos="fade-up" data-aos-duration="1000" data-aos-once=true
+                        data-aos-delay="500"></iframe>
                 </div>
             </section>
         </main>
-        <footer class="container-fluid">
-            <div class="row">
-                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                    <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
-                        class="logo logofoot col-12 col-lg-1 mx-auto">
-                    <div class="pt-4 col-12 col-lg-7">
-                        <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
-                        <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
-                        <p><i class="fa-solid fa-clock"></i> : Lunes a domingo - 9:00 hrs a 20:00 hrs</p>
-                    </div>
-                    <div class="iconos col-12 col-lg-3 text-center">
-                        <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                        <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <div class="animaciones">
+            <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid ">
+                <div class="row">
+                    <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
+                        <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
+                            class="logo logofoot col-12 col-lg-1 mx-auto">
+                        <div class="pt-4 col-12 col-lg-7">
+                            <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
+                            <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321 </p>
+                            <p><i class="fa-solid fa-clock"></i> : Lunes a domingo - 9:00 hrs a 20:00 hrs</p>
+                        </div>
+                        <div class="iconos col-12 col-lg-3 text-center">
+                            <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                            <a href="https://www.instagram.com" target="_blank"><i
+                                    class="fa-brands fa-instagram"></i></a>
+                            <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </footer>
+            </footer>
+        </div>
         <script src="../js/bootstrap.bundle.min.js"></script>
     </body>
 
