--- a/pages/michis.html
+++ b/pages/michis.html
@@ -6,17 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestros Michis | Miau Café</title>
     <meta name="description"
-        content="Conoce a nuestros encantadores gatos en Miau Café, descubre sus historias únicas y personalidades encantadoras.">
+        content="Descubre a los encantadores gatos de Miau Café: conoce sus historias únicas y personalidades encantadoras. Sumérgete en la magia de la compañía felina mientras disfrutas de tu café. ¡Conoce a nuestros adorables mininos ahora!">
     <meta name="keywords"
         content="Miau Café, nuestros gatos, gatos, felinos, perfiles de gatos, historias de gatos, personalidades de gatos">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
-    <script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gabarito&display=swap">
-</head>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+    <script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
 <body class="container-fluid p-3">
+    <script>
+        AOS.init();
+    </script>
     <header>
         <a href="../index.html" class="d-flex align-items-center justify-content-center">
             <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo">
@@ -72,7 +76,7 @@
         </div>
         <section class="container my-5 ">
             <div class="row d-flex justify-content-around">
-                <div class="card mt-3" style="width: 25rem;">
+                <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500">
                     <img src="../assets/img/hecate.jpg" class="card-img-top pt-3 rounded-5 "
                         alt="Hécate una gata tricolor">
                     <div class="card-body">
@@ -84,7 +88,7 @@
                         interacción llena de alegría y vitalidad.</p>
                     </div>
                 </div>
-                <div class="card mt-3" style="width: 25rem;">
+                <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500">
                     <img src="../assets/img/amy.jpg" class="card-img-top pt-3 rounded-5 "
                         alt="Amy una gata de pelo largo">
                     <div class="card-body">
@@ -95,7 +99,7 @@
                         que te hará sonreír.</p>
                     </div>
                 </div>
-                <div class="card mt-3" style="width: 25rem;">
+                <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500">
                     <img src="../assets/img/Rory.jpg" class="card-img-top pt-3 rounded-5 "
                         alt="Rory un gato de pelo gris">
                     <div class="card-body">
@@ -106,7 +110,7 @@
                         gatos.</p>
                     </div>
                 </div>
-                <div class="card mt-3" style="width: 25rem;">
+                <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500">
                     <img src="../assets/img/prompto.jpg" class="card-img-top pt-3 rounded-5 "
                         alt="Prompto el gato hermano de Amy pero con pelo corto">
                     <div class="card-body">
@@ -119,24 +123,26 @@
             </div>
         </section>
     </main>
-    <footer class="container-fluid">
-        <div class="row">
-            <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
-                    class="logo logofoot col-12 col-lg-1 mx-auto">
-                <div class="pt-4 col-12 col-lg-7">
-                    <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
-                    <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
-                    <p><i class="fa-solid fa-clock"></i> : Lunes a domingo - 9:00 hrs a 20:00 hrs</p>
-                </div>
-                <div class="iconos col-12 col-lg-3 text-center">
-                    <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+    <div class="animaciones">
+        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid ">
+            <div class="row">
+                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
+                    <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
+                        class="logo logofoot col-12 col-lg-1 mx-auto">
+                    <div class="pt-4 col-12 col-lg-7">
+                        <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
+                        <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321 </p>
+                        <p><i class="fa-solid fa-clock"></i> : Lunes a domingo - 9:00 hrs a 20:00 hrs</p>
+                    </div>
+                    <div class="iconos col-12 col-lg-3 text-center">
+                        <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
