--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -73,17 +73,20 @@
         </div>
         <div class="d-flex flex-wrap justify-content-center">
             <img src="../assets/img/carta1.jpg" class="col-12 col-lg-3 rounded-3 m-3" data-aos="flip-right"
-                data-aos-anchor-placement="bottom" data-aos-delay="0" alt="Capuccino ">
+                data-aos-once=true data-aos-anchor-placement="bottom" data-aos-delay="0" alt="Capuccino ">
             <img src="../assets/img/carta2.jpg" class="col-12 col-lg-3 rounded-3 m-3" data-aos="flip-down"
-                data-aos-anchor-placement="bottom" data-aos-delay="300" alt="Té canela y limon">
+                data-aos-once=true data-aos-anchor-placement="bottom" data-aos-delay="100" alt="Té canela y limon">
             <img src="../assets/img/carta3.jpg" class="col-12 col-lg-3 rounded-3 m-3" data-aos="flip-left"
-                data-aos-anchor-placement="bottom" data-aos-delay="600" alt="Hotcakes de Nutella fresa">
+                data-aos-once=true data-aos-anchor-placement="bottom" data-aos-delay="200"
+                alt="Hotcakes de Nutella fresa">
             <img src="../assets/img/carta4.jpg" class="col-12 col-lg-3 rounded-3 m-3" data-aos="flip-right"
-                data-aos-anchor-placement="bottom" data-aos-delay="900" alt="Sandwich de huevo tocino">
+                data-aos-once=true data-aos-anchor-placement="bottom" data-aos-delay="300"
+                alt="Sandwich de huevo tocino">
             <img src="../assets/img/carta5.jpg" class="col-12 col-lg-3 rounded-3 m-3" data-aos="flip-up"
-                data-aos-anchor-placement="bottom" data-aos-delay="1200" alt="Sandwich de palta y huevo">
+                data-aos-once=true data-aos-anchor-placement="bottom" data-aos-delay="400"
+                alt="Sandwich de palta y huevo">
             <img src="../assets/img/carta6.jpg" class="col-12 col-lg-3 rounded-3 m-3" data-aos="flip-left"
-                data-aos-anchor-placement="bottom" data-aos-delay="1500" alt="Pastel de Zanahoria">
+                data-aos-once=true data-aos-anchor-placement="bottom" data-aos-delay="500" alt="Pastel de Zanahoria">
         </div>
     </main>
     <div class="animaciones">
