--- a/pages/michis.html
+++ b/pages/michis.html
@@ -75,8 +75,8 @@
 
         </div>
         <section class="container my-5 ">
-            <div class="row d-flex justify-content-around">
-                <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500">
+            <div class="row d-flex justify-content-around animaciones">
+                <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500" data-aos-once=true>
                     <img src="../assets/img/hecate.jpg" class="card-img-top pt-3 rounded-5 "
                         alt="Hécate una gata tricolor">
                     <div class="card-body">
@@ -88,7 +88,7 @@
                         interacción llena de alegría y vitalidad.</p>
                     </div>
                 </div>
-                <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500">
+                <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500" data-aos-once=true>
                     <img src="../assets/img/amy.jpg" class="card-img-top pt-3 rounded-5 "
                         alt="Amy una gata de pelo largo">
                     <div class="card-body">
@@ -99,7 +99,7 @@
                         que te hará sonreír.</p>
                     </div>
                 </div>
-                <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500">
+                <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500" data-aos-once=true>
                     <img src="../assets/img/Rory.jpg" class="card-img-top pt-3 rounded-5 "
                         alt="Rory un gato de pelo gris">
                     <div class="card-body">
@@ -110,7 +110,7 @@
                         gatos.</p>
                     </div>
                 </div>
-                <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500">
+                <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500" data-aos-once=true>
                     <img src="../assets/img/prompto.jpg" class="card-img-top pt-3 rounded-5 "
                         alt="Prompto el gato hermano de Amy pero con pelo corto">
                     <div class="card-body">
