probando meta property

--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca | Miau Café</title>
+    <meta property="og:image" content="../assets/img/logo_cat_cafe_meta.png">
     <meta name="description"
         content="Explora la historia de Miau Café, el lugar donde los amantes de los gatos se reúnen para disfrutar de una experiencia única. Conoce a nuestros adorables mininos y sumérgete en la magia de nuestro cat café. ¡Descubre más aquí!">
     <meta name="keywords" content="Miau Café, cat café, historia, amantes de los gatos, café para gatos">
