--- a/pages/michis.html
+++ b/pages/michis.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestros Michis | Miau Café</title>
+    <meta property="og:image" content="../assets/img/logo_cat_cafe_meta.png">
     <meta name="description"
         content="Descubre a los encantadores gatos de Miau Café: conoce sus historias únicas y personalidades encantadoras. Sumérgete en la magia de la compañía felina mientras disfrutas de tu café. ¡Conoce a nuestros adorables mininos ahora!">
     <meta name="keywords"
