--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto | Miau Café</title>
+    <meta property="og:image" content="../assets/img/logo_cat_cafe_meta.png">
     <meta name="description"
         content="¡Conéctate con nosotros en Miau Café! Obtén respuestas a tus preguntas, realiza reservaciones y descubre nuestra ubicación. Estamos aquí para hacer tu experiencia felina inolvidable. ¡Contáctanos ahora!">
     <meta name="keywords" content="Miau Café, contacto, ubicación, reservaciones">
