--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miau Café - Tu lugar para disfrutar de café y gatos</title>
-    <meta property="og:image" content="./assets/img/logo_cat_cafe_meta.png">
+    <meta property="og:image" content="/assets/img/logo_cat_cafe_meta.png">
     <meta name="description" <meta name="description"
         content="Vive la experiencia única de disfrutar de café o té en compañía de encantadores gatos en Miau Café. Conoce a nuestros adorables mininos, explora sus perfiles y escapa del estrés diario en nuestro acogedor espacio. ¡Te esperamos!">
     <meta name="keywords"
