--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca | Miau Café</title>
-    <meta property="og:image" content="../assets/img/logo_cat_cafe_meta.png">
     <meta name="description"
         content="Explora la historia de Miau Café, el lugar donde los amantes de los gatos se reúnen para disfrutar de una experiencia única. Conoce a nuestros adorables mininos y sumérgete en la magia de nuestro cat café. ¡Descubre más aquí!">
     <meta name="keywords" content="Miau Café, cat café, historia, amantes de los gatos, café para gatos">
@@ -28,7 +27,7 @@
             <a href="../index.html" class="d-flex align-items-center justify-content-center">
                 <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Cafe" class="logo">
                 <div class="text-center mx-4 pt-3">
-                    <h1 class="mb-0">Miau café</h1>
+                    <h2 class="mb-0" id="textoLogo">Miau café</h2>
                     <p>Un café para ronronear</p>
                 </div>
             </a>
