--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
     </nav>
     <main class="mt-2">
-        <div class="card d-none d-lg-block">
+        <div class=" d-none d-lg-block">
             <img src="./assets/img/banner.jpeg" class="card-img " alt="Banner Miau Cafe">
         </div>
         <div class="container my-5">
