--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -60,39 +60,32 @@
             </div>
         </nav>
         <main>
-            <section>
-                <div class="container my-2">
-                    <div class="row">
-                        <div data-aos="fade-center" data-aos-duration="500" class="col-12 col-lg-6 ">
-                            <h1 class="text-center mt-5 mb-3">Acerca</h1>
-                            <p>La historia de Miau Café comenzó con la visión de crear un espacio donde los amantes de
-                                los gatos pudieran disfrutar de la compañía de estos encantadores felinos mientras
-                                saborean una taza de café o té. Fundada por un grupo de apasionados dueños de gatos,
-                                nuestra cafetería es el hogar permanente de una pandilla de gatos consentidos que forman
-                                parte integral de nuestra familia y, por supuesto, de la experiencia que ofrecemos a
-                                nuestros visitantes.</p>
-
-                            <p>En Miau Café, nos enorgullece brindar un entorno seguro y acogedor para nuestros gatos,
-                                garantizando que vivan vidas felices y saludables. Cada uno de ellos tiene su propia
-                                historia y personalidad única, lo que agrega un toque especial a la atmósfera de nuestra
-                                cafetería. Ven y únete a nuestra historia, donde la pasión por los gatos y la pasión por
-                                el café se unen para crear un lugar mágico donde el amor felino es una constante.
-                                ¡Bienvenido a Miau Café, donde nuestros gatos son parte.</p>
-
-                        </div>
-                        <div data-aos="zoom-in" class="col-12 col-lg-6">
-                            <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="img-fluid">
-                        </div>
+            <section class="container my-2">
+                <div class="row animaciones">
+                    <div data-aos="fade-center" class="col-12 col-lg-6 ">
+                        <h1 class="text-center mt-5 mb-3">Acerca</h1>
+                        <p>La historia de Miau Café comenzó con la visión de crear un espacio donde los amantes de
+                            los gatos pudieran disfrutar de la compañía de estos encantadores felinos mientras
+                            saborean una taza de café o té. Fundada por un grupo de apasionados dueños de gatos,
+                            nuestra cafetería es el hogar permanente de una pandilla de gatos consentidos que forman
+                            parte integral de nuestra familia y, por supuesto, de la experiencia que ofrecemos a
+                            nuestros visitantes.</p>
+                        <p>En Miau Café, nos enorgullece brindar un entorno seguro y acogedor para nuestros gatos,
+                            garantizando que vivan vidas felices y saludables. Cada uno de ellos tiene su propia
+                            historia y personalidad única, lo que agrega un toque especial a la atmósfera de nuestra
+                            cafetería. Ven y únete a nuestra historia, donde la pasión por los gatos y la pasión por
+                            el café se unen para crear un lugar mágico donde el amor felino es una constante.
+                            ¡Bienvenido a Miau Café, donde nuestros gatos son parte.</p>
                     </div>
-                    <div>
+                    <div data-aos="zoom-in" class="col-12 col-lg-6">
+                        <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="img-fluid">
                     </div>
-                    <iframe width="100%" height="600"
-                        src="https://www.youtube.com/embed/KmeSy7FPdCA?si=zeQ-2SmNcNuZqREB&amp;controls=0"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen data-aos="fade-up" data-aos-duration="1000" data-aos-once=true
-                        data-aos-delay="500"></iframe>
                 </div>
+                <iframe width="100%" height="600"
+                    src="https://www.youtube.com/embed/KmeSy7FPdCA?si=zeQ-2SmNcNuZqREB&amp;controls=0"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen data-aos="fade-up" data-aos-duration="1000" data-aos-once=true></iframe>
             </section>
         </main>
         <div class="animaciones">
