fix tarjetas y margenes + pagina 404

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
 
-<body class="container-fluid p-3">
+<body class="container-fluid pb-3 px-3">
     <script>
         AOS.init();
     </script>
@@ -101,7 +101,8 @@
                             </label>
                             <div class="text-center">
                                 <button type="reset" class="btn btn-alt">Limpiar Formulario</button>
-                                <button type="submit" class="btn btn-color ">Enviar Formulario</button>
+                                <button type="submit" class="btn btn-color" formaction="../404.html">Enviar
+                                    Formulario</button>
                             </div>
 
                         </form>
