--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
 
-<body class="container-fluid p-3">
+<body class="container-fluid pb-3 px-3">
     <script>
         AOS.init();
     </script>
@@ -65,7 +65,7 @@
         <div class="container my-5">
             <div class="row">
                 <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000"
-                    data-aos-once=true class="col-12 col-lg-6 my-5">
+                    data-aos-once=true class="col-12 col-lg-6 my-lg-5">
                     <h1>¡Ven a vivir la experiencia Cat Café en Miau Café!</h1>
                     <p>¡Bienvenidos al lugar donde los amantes de los felinos encuentran su paraíso! En nuestro Miau
                         Café, te invitamos a sumergirte en un mundo de suavidad, ronroneos y pura diversión.</p>
@@ -79,7 +79,7 @@
                         rincón. ¿Estás listo para consentir a tu alma gatuna?</p>
                 </div>
                 <div data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-duration="1000"
-                    data-aos-once=true class="col-12 col-lg-6 my-5">
+                    data-aos-once=true class="col-12 col-lg-6 mt-5">
                     <img src="./assets/img/gatos_ventana.jpg" alt="Gatos en una ventana" class="img-fluid rounded-pill">
                 </div>
             </div>
@@ -87,7 +87,7 @@
         <div class="container my-5">
             <div class="row">
                 <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000"
-                    data-aos-once=true class="col-12 col-lg-6 my-5 order-lg-last">
+                    data-aos-once=true class="col-12 col-lg-6 mb-5 order-lg-last">
                     <h2>¡Nuestros michis te esperan!</h2>
                     <p>Nuestros adorables mininos de Miau Café están ansiosos por conocerte. En "Nuestros Michis te
                         Esperan", te presentamos a nuestra traviesa pandilla de gatos, cada uno con su personalidad
@@ -98,10 +98,9 @@
                     <p>¿Quieres aprender más sobre nuestras mascotas de cuatro patas y sus historias en Miau Café?
                         ¡Explora sus perfiles y descubre por qué cada uno de ellos es tan especial! Ven y conoce a
                         los protagonistas de Miau Café y déjate cautivar por su magia peluda.</p>
-
                 </div>
                 <div data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-duration="1000"
-                    data-aos-once=true class="col-12 col-lg-6 mb-3 order-lg-first">
+                    data-aos-once=true class="col-12 col-lg-6  order-lg-first">
                     <img src="./assets/img/gato1.jpg" alt="Gato durmiendo al lado de un cafe"
                         class="img-fluid rounded-pill">
                 </div>
