--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -18,7 +18,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
 
-<body class="container-fluid p-3">
+<body class="container-fluid pb-3 px-3">
     <script>
         AOS.init();
     </script>
