--- a/pages/michis.html
+++ b/pages/michis.html
@@ -17,7 +17,7 @@
     <script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
-<body class="container-fluid p-3">
+<body class="container-fluid pb-3 px-3">
     <script>
         AOS.init();
     </script>
