fix altas resoluciones

--- a/404.html
+++ b/404.html
@@ -9,16 +9,15 @@
         content="Vive la experiencia única de disfrutar de café o té en compañía de encantadores gatos en Miau Café. Conoce a nuestros adorables mininos, explora sus perfiles y escapa del estrés diario en nuestro acogedor espacio. ¡Te esperamos!">
     <meta name="keywords"
         content="Miau Café, Cat Café, café para gatos, gatos, felinos, relajación, diversión, café y gatos">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/estilos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gabarito&display=swap">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
-
-<body class="container-fluid pb-3 px-3">
+<body class="container-fluid d-flex flex-column justify-content-between">
     <script>
         AOS.init();
     </script>
@@ -30,34 +29,34 @@
                 <p>Un café para ronronear</p>
             </div>
         </a>
-    </header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
-        <div class="container">
-            <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarTogglerDemo02">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mt-2 mt-lg-0 mb-lg-0 mx-auto ">
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="./index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="./pages/galeria.html">Galería</a>
-                    </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="./pages/michis.html">Nuestros michis</a>
-                    </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="./pages/acerca.html">Acerca</a>
-                    </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-                    </li>
-                </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top py-2">
+            <div class="container">
+                <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mt-2 mt-lg-0 mb-lg-0 mx-auto ">
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="./index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="./pages/galeria.html">Galería</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="./pages/michis.html">Nuestros michis</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="./pages/acerca.html">Acerca</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
     <main class="mt-2">
         <div class="container my-5">
             <div class="row">
@@ -862,7 +861,7 @@
         </div>
     </main>
     <div class="animaciones">
-        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid ">
+        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
             <div class="row">
                 <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
                     <img src="./assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
