--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
 
-<body class="container-fluid pb-3 px-3">
+<body class="container-fluid d-flex flex-column justify-content-between">
     <script>
         AOS.init();
     </script>
@@ -30,38 +30,39 @@
                 <p>Un café para ronronear</p>
             </div>
         </a>
-    </header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
-        <div class="container">
-            <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarTogglerDemo02">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mt-2 mt-lg-0 mb-lg-0 mx-auto ">
-                    <li class="nav-item text-center">
-                        <a class="nav-link active" aria-current="page" href="#" id="activo">Inicio</a>
-                    </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="./pages/galeria.html">Galería</a>
-                    </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="./pages/michis.html">Nuestros michis</a>
-                    </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="./pages/acerca.html">Acerca</a>
-                    </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-                    </li>
-                </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
+            <div class="container">
+                <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mt-2 mt-lg-0 mb-lg-0 mx-auto ">
+                        <li class="nav-item text-center">
+                            <a class="nav-link active" aria-current="page" href="#" id="activo">Inicio</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="./pages/galeria.html">Galería</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="./pages/michis.html">Nuestros michis</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="./pages/acerca.html">Acerca</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-    <main class="mt-2">
+        </nav>
         <div class=" d-none d-lg-block">
             <img src="./assets/img/banner.jpeg" class="card-img " alt="Banner Miau Cafe">
         </div>
+    </header>
+
+    <main class="mt-2">
         <div class="container my-5">
             <div class="row">
                 <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000"
@@ -108,7 +109,7 @@
         </div>
     </main>
     <div class="animaciones">
-        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid ">
+        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid  ">
             <div class="row">
                 <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
                     <img src="./assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
