--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
 
-<body class="container-fluid pb-3 px-3">
+<body class="container-fluid d-flex flex-column justify-content-between">
     <script>
         AOS.init();
     </script>
@@ -29,8 +29,7 @@
                 <p>Un café para ronronear</p>
             </div>
         </a>
-    </header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
+            <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
         <div class="container">
             <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarTogglerDemo02">
@@ -57,6 +56,8 @@
             </div>
         </div>
     </nav>
+    </header>
+
     <main class="mt-2">
         <section>
             <div class="container my-5">
@@ -101,7 +102,7 @@
                             </label>
                             <div class="text-center">
                                 <button type="reset" class="btn btn-alt">Limpiar Formulario</button>
-                                <button type="submit" class="btn btn-color" formaction="../404.html">Enviar
+                                <button type="submit" class="btn btn-color" formaction="./404.html">Enviar
                                     Formulario</button>
                             </div>
 
