--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -18,7 +18,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
 
-<body class="container-fluid pb-3 px-3">
+<body class="container-fluid d-flex flex-column justify-content-between">
     <script>
         AOS.init();
     </script>
@@ -30,34 +30,35 @@
                 <p>Un café para ronronear</p>
             </div>
         </a>
-    </header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
-        <div class="container">
-            <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarTogglerDemo02">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mt-2 mt-lg-0 mb-lg-0 mx-auto ">
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link active" aria-current="page" href="#" id="activo">Galería</a>
-                    </li>
-                    <li class=" nav-item text-center">
-                        <a class="nav-link" href="./michis.html">Nuestros michis</a>
-                    </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="./acerca.html">Acerca</a>
-                    </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="./contacto.html">Contacto</a>
-                    </li>
-                </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
+            <div class="container">
+                <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mt-2 mt-lg-0 mb-lg-0 mx-auto ">
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link active" aria-current="page" href="#" id="activo">Galería</a>
+                        </li>
+                        <li class=" nav-item text-center">
+                            <a class="nav-link" href="./michis.html">Nuestros michis</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="./acerca.html">Acerca</a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
+   
     <main class="mt-2">
         <div class="container my-5">
             <h1 class="text-center">Galería</h1>
