--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
     </script>
     <header>
         <a href="./index.html" class="d-flex align-items-center justify-content-center">
-            <img src="./assets/img/logo_cat_cafe.png" alt="Logo de Miau Café" class="logo">
+            <img src="/assets/img/logo_cat_cafe.png" alt="Logo de Miau Café" class="logo">
             <div class="text-center mx-4 pt-3">
                 <h2 class="mb-0" id="textoLogo">Miau café</h2>
                 <p>Un café para ronronear</p>
@@ -864,7 +864,7 @@
         <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
             <div class="row">
                 <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                    <img src="./assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
+                    <img src="/assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
                         class="logo logofoot col-12 col-lg-1 mx-auto">
                     <div class="pt-4 col-12 col-lg-7">
                         <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
@@ -880,7 +880,7 @@
             </div>
         </footer>
     </div>
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
