revision de codigo con validador del W3C

--- a/404.html
+++ b/404.html
@@ -66,7 +66,6 @@
                     <p>¡Lo siento, parece que los gatos jugaron con esta página y la escondieron! 🙀</p>
                     <p><a href="./index.html">¡Volver a la Purrincipio!</a></p>
                 </div>
-                <div class="col-12 col-lg-6 mb-3 order-lg-first">
                     <style>
                         svg#freepik_stories-playful-cat:not(.animated) .animable {
                             opacity: 0;
@@ -179,8 +178,7 @@
                         }
                     </style>
                     <svg class="animated" id="freepik_stories-playful-cat" xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 500 500" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                        xmlns:svgjs="http://svgjs.com/svgjs">
+                        viewBox="0 0 500 500" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g id="freepik--background-complete--inject-7" style="transform-origin: 249.885px 188.33px 0px;"
                             class="animable">
                             <path
@@ -856,7 +854,6 @@
                             </filter>
                         </defs>
                     </svg>
-                </div>
             </div>
         </div>
     </main>
