--- a/pages/michis.html
+++ b/pages/michis.html
@@ -78,7 +78,7 @@
                         alt="Hécate una gata tricolor">
                     <div class="card-body">
                         <h2 class="text-center">Hécate</h2>
-                        Hecate es una gata tricolor muy cariñosa y juguetona que roba corazones en Miau Café. Con su
+                        <p>Hecate es una gata tricolor muy cariñosa y juguetona que roba corazones en Miau Café. Con su
                         actitud
                         juguetona y su amor por la diversión, Hecate es la compañía perfecta para aquellos que buscan
                         una
@@ -90,7 +90,7 @@
                         alt="Amy una gata de pelo largo">
                     <div class="card-body">
                         <h2 class="text-center">Amy</h2>
-                        Amy es una gata de pelo largo blanco con naranja que destaca por su maullido fino y encantador.
+                        <p>Amy es una gata de pelo largo blanco con naranja que destaca por su maullido fino y encantador.
                         Su elegancia y su personalidad cariñosa hacen que sea un miembro querido en Miau Café. Amy es la
                         compañía perfecta para aquellos que buscan la dulzura de una gata de pelo largo y un maullido
                         que te hará sonreír.</p>
@@ -101,7 +101,7 @@
                         alt="Rory un gato de pelo gris">
                     <div class="card-body">
                         <h2 class="text-center">Rory</h2>
-                        Rory es un gato gris que, en un principio, puede parecer arisco, pero cuando toma confianza, se
+                        <p>Rory es un gato gris que, en un principio, puede parecer arisco, pero cuando toma confianza, se
                         convierte en un verdadero amor. Con su actitud reservada y su capacidad para sorprenderte con su
                         cariño, Rory es el compañero perfecto para aquellos que buscan una conexión única con nuestros
                         gatos.</p>
@@ -112,7 +112,7 @@
                         alt="Prompto el gato hermano de Amy pero con pelo corto">
                     <div class="card-body">
                         <h2 class="text-center">Prompto</h2>
-                        Prompto es el hermano de Amy y comparte sus mismos colores, pero con el pelo corto y una
+                        <p>Prompto es el hermano de Amy y comparte sus mismos colores, pero con el pelo corto y una
                         personalidad muy gato naranja. Con su actitud juguetona y traviesa, Prompto es un auténtico
                         torbellino de diversión y vitalidad que hará que tu visita a Miau Café sea inolvidable.</p>
                     </div>
