--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -80,11 +80,7 @@
                     <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="img-fluid">
                 </div>
             </div>
-            <iframe width="100%" height="600"
-                src="https://www.youtube.com/embed/KmeSy7FPdCA?si=zeQ-2SmNcNuZqREB&amp;controls=0"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen data-aos="fade-up" data-aos-duration="1000" data-aos-once=true></iframe>
+            <iframe width="100%" height="600" src="https://www.youtube-nocookie.com/embed/KmeSy7FPdCA?si=DTGgnZE3RS-cKz4u" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="bordes"></iframe>
         </section>
     </main>
     <div class="animaciones">
@@ -105,8 +101,8 @@
                     </div>
                 </div>
             </div>
+        </footer>
     </div>
-    </footer>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
