--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +15,6 @@
     <script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
-
 <body class="container-fluid d-flex flex-column justify-content-between">
     <script>
         AOS.init();
@@ -57,7 +55,6 @@
         </div>
     </nav>
     </header>
-
     <main class="mt-2">
         <section>
             <div class="container my-5">
@@ -105,7 +102,6 @@
                                 <button type="submit" class="btn btn-color" formaction="./404.html">Enviar
                                     Formulario</button>
                             </div>
-
                         </form>
                     </div>
                 </div>
@@ -124,7 +120,7 @@
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53534.9942405545!2d-71.6081948194918!3d-33.005432700411276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9689de84ead41255%3A0x8e5fde76df3d413f!2zVmnDsWEgZGVsIE1arcaCw7WpvcywgVmFscGFyYcOtc28!5e0!3m2!1ses-419!2scl!4v1696549404709!5m2!1ses-419!2scl"
                     width="100%" height="300" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade" class="bordes" data-aos="fade-up"
+                    referrerpolicy="no-referrer-when-downgrade" class="bordes mb-3" data-aos="fade-up"
                     data-aos-duration="1000" data-aos-once=true data-aos-delay="300"
                     data-aos-anchor-placement="bottom"></iframe>
             </div>
@@ -153,5 +149,4 @@
     </div>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
