revision de codigo con validador del W3C

--- a/404.html
+++ b/404.html
@@ -178,7 +178,8 @@
                         }
                     </style>
                     <svg class="animated" id="freepik_stories-playful-cat" xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 500 500" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        viewBox="0 0 500 500" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        xmlns:svgjs="http://svgjs.com/svgjs">
                         <g id="freepik--background-complete--inject-7" style="transform-origin: 249.885px 188.33px 0px;"
                             class="animable">
                             <path
@@ -854,7 +855,7 @@
                             </filter>
                         </defs>
                     </svg>
-            </div>
+                </div>
         </div>
     </main>
     <div class="animaciones">
