revision de codigo con validador del W3C

--- a/404.html
+++ b/404.html
@@ -66,6 +66,7 @@
                     <p>¡Lo siento, parece que los gatos jugaron con esta página y la escondieron! 🙀</p>
                     <p><a href="./index.html">¡Volver a la Purrincipio!</a></p>
                 </div>
+                <div class="col-12 col-lg-6 mb-3 order-lg-first">
                     <style>
                         svg#freepik_stories-playful-cat:not(.animated) .animable {
                             opacity: 0;
@@ -856,6 +857,7 @@
                         </defs>
                     </svg>
                 </div>
+            </div>
         </div>
     </main>
     <div class="animaciones">
